# hydra-slurm-rich-launcher

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: config.yaml  my_app.py
hydra_plugins/hydra_slurm_rich_launcher/: _progress_handler.py  _slurm_watcher.py  config.py  slurm_rich_launcher.py  utils.py
